メイン画面のidの修正 textのStringでの管理の変更 （試し）日本語、英語の対応

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">postalCodeAndAddressApp</string>
+
+    <string name="searchButton_text">search</string>
+    <string name="resultLabel_text">result</string>
+
 </resources>
