入力した値が、半角英数３桁＋ - 半角英数４桁の場合 例：xxx-xxxx 通信処理を行い
それ以外の時は処理を行わない

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="dialog_title">Attention!</string>
     <string name="dialog_message">Please enter a 7 digit number!</string>
 
-    <string name="hint_words">Please enter 7 digits without hyphen.</string>
+    <string name="hint_words">Please enter your zip code.</string>
     <string name="no_address_message">No matching address exists.</string>
+    <string name="invalid_PostAddress">Invalid postal code!</string>
 
     <string name="answer_yes">Yes</string>
 
